# genbg

./: CMakeLists.txt  README.md  TODO
graphs/: minmaxTest.yml  oneSubgraph.yml  presinus.yml  sine.yml  sineTest.yml  sine_4.yml
graphs/special/: cosine.yml  cosine_4.yml  cosine_4_old.yml  cosine_old.yml  normalize.yml
include/: bg_generate2.h  bg_generate_c.h  bg_generate_vhdl.h  bg_transformation.h  float_to_std.h  template_engine.h
src/: bg_generate2.c  bg_generate_c.c  bg_generate_vhdl.c  bg_transformation.c  clusterBG.c  float_to_std.c  generateBG.c  generateBG_vhdl.c  generateFromTemplate.c  template_engine.c
templates/: bg_graph_config_template.vhd  bg_graph_template.vhd
vhdl/: bg_acos.vhd  bg_asin.vhd  bg_atan.vhd  bg_atan2.vhd  bg_cosine.vhd  bg_cosine2.vhd  bg_edge.vhd  bg_edge_simple.vhd  bg_exp.vhd  bg_fmod.vhd  bg_graph.vhd  bg_graph_components.vhd  bg_graph_config.vhd  bg_graph_config_template.vhd  bg_graph_sine.vhd  bg_graph_sine_cfg.vhd  bg_graph_template.vhd  bg_greater_than_zero.vhd  bg_inverse.vhd  bg_less_than_epsilon.vhd  bg_log.vhd  bg_merge_max.vhd  bg_merge_mean.vhd  bg_merge_min.vhd  bg_merge_norm.vhd  bg_merge_prod.vhd  bg_merge_sum.vhd  bg_merge_wsum.vhd  bg_pipe.vhd  bg_pow.vhd  bg_sine.vhd  bg_sink.vhd  bg_source.vhd  bg_sqrt.vhd  bg_tan.vhd
vhdl/fpu_add/: fpu_add.vhd  fpu_sub.vhd
vhdl/fpu_div/: fpu_div.vhd
vhdl/fpu_log2/: fpu_log2.vhd
vhdl/fpu_mul/: fpu_mul.vhd
vhdl/fpu_pow2/: fpu_pow2.vhd
vhdl/fpu_sqrt/: fpu_sqrt.vhd
vhdl/fpu_trunc/: fpu_trunc.vhd
